# opmonschema

./: CMakeLists.txt  generate_protos  requirements.txt  setup.cfg  setup.py
docs/: README.md
src/: dummy.cpp
