[metadata]
name = opmonschema
version = attr: opmonschema.__version__
url = https://github.com/pawelplesniak/opmonschema
long_description = file: docs/README.md
long_description_content_type = text/markdown
description = Schema ERS protobuf messages published to postgresql through Kafka
author = Pawel Plesniak, Pierre Lasorak
author_email = pawel.plesniak15@imperial.ac.uk, p.lasorak@imperial.ac.uk

[options]
packages = find_namespace:
package_dir = =python_not_for_dunedaq
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = python_not_for_dunedaq
include_package_data = true